<resources>
    <string name="app_name">microDoctor</string>
    <string name="sleep_title1">Good Sleep Habits</string>
    <string name="sleep_title2">Sleep Disorders</string>
    <string name="sleep_title3">What Affects Sleep</string>
    <string name="sleep_title4">Tests and Treatments</string>
    <string name="title1_option2">"<big>Getting a good night sleep is key to performing at your best during the day. Find out how to get the amount of rest you need.</big>\n\n"
        "<b><big>Are You Getting Enough Sleep?</big></b>\n"
        "The amount of sleep a person needs depends on many factors, including age.\n\n"
        "<b><big>Stages of Sleep</big></b>\n"
        "Sleep stages are divided into non-rapid eye movement (non-REM) and rapid eye movement (REM).\n\n"
        "<b><big>Facts About Dreaming</big></b>\n"
        "Dreams can be entertaining, disturbing, or downright bizarre. We all dream even if we don't remember it the next day. But why do we dream? And what do dreams mean, anyway?\n\n"
        "<b><big>Do You Get Good Sleep?</big></b>\n"
        "This interactive assessment will help you assess your sleep habits and sleep quality, and provide tips for improving your night's rest.\n\n"
        "<b><big>Keeping a Sleep Diary</big></b>\n"
        "Learn about your sleep patterns and habits by keeping a daily sleep diary. It may be key to helping you and your health care provider diagnose and treat a sleep disorder.\n\n"
        "<b><big>Sleep Tracker</big></b>\n"
        "An easy way to track your sleep habits and spot patterns."
    </string>
    <string name="title2_option2">
        "<big>Whether you have occasional trouble sleeping or you're living with a sleep disorder, you can get quality sleep and learn to better manage your condition.</big>\n\n"
        "<b><big>Central Sleep Apnea</big></b>\n"
        "In central sleep apnea, breathing is disrupted regularly during sleep because of the way the brain functions.\n\n"
        "<b><big>An Overview of Insomnia</big></b>\n"
        "Insomnia is a sleep disorder that is characterized by difficulty falling and/or staying asleep.\n\n"
        "<b><big>Hypersomnia (Daytime Sleepiness)</big></b>\n"
        "Hypersomnia, or excessive sleepiness, is a condition in which a person has trouble staying awake during the day. People who have hypersomnia can fall asleep at any time for instance, at work or while they are driving.\n\n"
        "<b><big>What Are Parasomnias?</big></b>\n"
        "Parasomnias are disruptive sleep disorders that can occur during arousals from REM sleep or partial arousals from non-REM sleep. Parasomnias include nightmares, night terrors, sleepwalking, confusional arousals, and many others.\n\n"
        "<b><big>REM Sleep Behavior Disorder</big></b>\n"
        "In a person with REM sleep behavior disorder (RBD), the paralysis that normally occurs during REM sleep is incomplete or absent, allowing the person to "act out" his or her dreams.\n\n"
        "<b><big>Shift Work Sleep Disorder</big></b>\n"
        "Shift work sleep disorder is trouble sleeping because you work nights or rotating shifts. You also may have this problem if you have trouble staying awake or alert when you are supposed to work your shift.\n\n"
        "<b><big>What Is Narcolepsy?</big></b>\n"
        "Narcolepsy is a neurological disorder that affects the control of sleep and wakefulness"
    </string>
    <string name="title3_option2">
        "<big>Learn about health conditions that can negatively impact your sleep.</big>\n\n"
        "<b><big>Chronic Illness</big></b>\n"
        "Sleep problems can be due to a chronic illness, such as diabetes, arthritis, HIV/AIDS, lupus, Parkinson's disease, Alzheimer's disease, and multiple sclerosis.\n\n"
        "<b><big>Psychiatric Complications</big></b>\n"
        "There is no evidence that sleep disorders are a cause of psychiatric disorders.  But sleep and psychiatric disorders such as schizophrenia and depression are closely related.\n\n"
        "<b><big>Reducing Stress for Better Sleep</big></b>\n"
        "If high levels of unwanted stress are not properly managed, your health and sense of well-being can suffer. Therefore, it is important to learn how to manage stress.\n\n"
        "<b><big>Sleeping Better As You Get Older</big></b>\n"
        "Regardless of your age, good restorative sleep is essential to physical health and emotional well-being."
    </string>
    <string name="title4_option2">
        "<big>Learn about tests used to diagnose sleep disorders and treatments that can help, from home remedies to prescription medications.</big>\n\n"
        "<b><big>What to Expect From a Sleep Study</big></b>\n"
        "A sleep study or polysomnogram (PSG) is a test that electronically transmits and records specific physical activities while you sleep.\n\n"
        "<b><big>How Clinical Trials Work</big></b>\n"
        "A clinical trial, also called a research study, is a research program that tests the effectiveness and safety of various interventions in people with sleep disorders.\n\n"
        "<b><big>Side Effects of Sleeping Pills</big></b>\n"
        "A sleeping pill may be effective at ending your sleep problems short-term. But it's important to make sure you understand everything you need to know about sleeping pills."
    </string>
    <string name="ptsd_title1">Memories</string>
    <string name="ptsd_title2">Avoidance</string>
    <string name="ptsd_title3">Behavior Changes</string>
    <string name="ptsd_title4">Mood Swings</string>
    <string name="ptsd_title1_description">
        "Whether you're thinking about it or not, memories of the traumatic event can come back to bother you. You may experience them in your <b>sleep</b> as <b>nightmares</b> or during the day as flashbacks. That means you relive the event as if it's happening for the first time.\n\n"
        "Both can cause you to feel anxious, afraid, guilty, or suspicious. These emotions may play out physically in the form of chills, shaking, <b>headaches</b>, <b>heart palpitations</b>, and <b>panic attacks</b>."
    </string>
    <string name="ptsd_title2_description">
        "You don't want to think about it. You don't want to talk about it. You steer clear of everyone and everything that reminds you of the event, including places and activities.\n\n"
        "Avoidance can also mean staying away from people in general not just the ones connected with the event. This can cause you to feel detached and alone."
    </string>
    <string name="ptsd_title3_description">
        "Doctors call these 'arousal symptoms.' They can make your emotions more intense or make you react differently than you normally would. For example, if you're a careful driver, you might start driving too fast or be super-aggressive on the road. Irrational, angry outbursts are very common.\n\n"
        "Many find it hard to focus. Feelings of danger and being under attack can ruin concentration and keep you from finishing tasks you do every day. This can also lead to <b>trouble sleeping</b>, whether you're having nightmares or not."
    </string>
    <string name="ptsd_title4_description">
        "PTSD doesn't always come with clues like nightmares and flashbacks. Sometimes it seems like a mood change unrelated to the traumatic event.\n\n"
        "You'll know it by its negativity. You may feel hopeless, numb, or bad about yourself or others. Thoughts of <b>suicide</b> can come and go. Deep feelings of guilt and shame are common, as well.\n\n"
        "Activities you normally enjoy may not interest you anymore. Your motivation to maintain <b>relationships</b> with close friends and family could be low."
    </string>
    <string name="food_title1">What is food poisoning?</string>
    <string name="food_title2">Cause</string>
    <string name="food_title3">Symptoms</string>
    <string name="food_title4">Exams and Tests</string>
    <string name="food_title1_description">
        "<b>Food poisoning</b> is an illness caused by eating foods that have harmful organisms in them. These harmful germs can include bacteria, <b>parasites</b>, and viruses. They are mostly found in raw meat, chicken, fish, and eggs, but they can spread to any type of food. They can also grow on food that is left out on counters or outdoors or is stored too long before you eat it. Sometimes <b>food poisoning</b> happens when people don't wash their hands before they touch food.\n\n"
        "Most of the time, food poisoning is mild and goes away after a few days. All you can do is wait for your body to get rid of the germ that is causing the illness. But some types of food poisoning may be more serious, and you may need to see a doctor."
    </string>
    <string name="food_title2_description">
        "<b>During food processing.</b>> It is normal to find bacteria in the <b>intestines</b> of healthy animals that we use for food. If bacteria come in contact with meat or poultry during processing, they can contaminate the food.\n\n"
        "<b>During food growing.</b> Fresh <b>fruits and vegetables</b> can be contaminated if they are washed or irrigated with water that is contaminated with animal manure or human sewage.\n\n"
        "<b>During food handling.</b> Food can be contaminated when an infected person handles the food or if it comes in contact with another contaminated product. For example, if you use the same cutting board for both chopping vegetables and preparing raw meat, you risk contaminating the vegetables.\n\n"
        "<b>Through the environment.</b>> Many harmful organisms that are commonly found in dirt, dust, and water can find their way into the foods we eat."
    </string>
    <string name="food_title3_description">
        "The <b>symptoms of food poisoning</b> usually affect your <b>stomach</b> and <b>intestines</b>(gastrointestinal tract).\n\n"
        "1. The first symptom is usually diarrhea.\n\n"
        "2. Other symptoms include feeling sick to your <b>stomach (nausea)</b>, <b>vomiting</b>, and abdominal (belly) <b>cramps</b>."
    </string>
    <string name="food_title4_description">
        "Most <b>food poisoning</b> is mild and passes in a few days, so most people don't go to a doctor for a diagnosis. You can often diagnose <b>food poisoning</b> yourself if others who ate the same food as you also become ill.\n\n"
        "If you do go to your doctor, he or she will make the diagnosis based on your symptoms, a <b>physical exam</b>, and your medical history. Your doctor will ask where you have been eating and whether anyone who ate the same food has the same symptoms.\n\n"
    </string>
    <string name="shortcut1_short_label">Trending</string>
    <string name="shortcut1_long_label">Trending Topics</string>
    <string name="shortcut2_short_label">Symptom</string>
    <string name="shortcut2_long_label">Symptom Checker</string>
    <string name="shortcut3_short_label">Chemists</string>
    <string name="shortcut3_long_label">Chemists Nearby</string>
</resources>