<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.nishantsikri.microdoctor.PTSDActivity"
    tools:showIn="@layout/activity_ptsd">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/ptsdexpandableButton1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#e74c3c"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:textSize="13dp"
                android:onClick="ptsdexpandableButton1"
                android:text="@string/ptsd_title1"
                android:paddingRight="10dp"
                android:textColor="#fff" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/ptsdexpandableLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/ptsdexpandableButton1"
                android:background="#f1948a"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_interpolator="accelerate"
                app:ael_orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:text="@string/ptsd_title1_description"/>
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

            <Button
                android:id="@+id/ptsdexpandableButton2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ptsdexpandableLayout1"
                android:background="#9b59b6"
                android:text="@string/ptsd_title2"
                android:textSize="13dp"
                android:onClick="ptsdexpandableButton2"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:paddingRight="10dp"
                android:textColor="#fff" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/ptsdexpandableLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/ptsdexpandableButton2"
                android:background="#c39bd3"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_interpolator="accelerate"
                app:ael_orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:text="@string/ptsd_title2_description" />
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

            <Button
                android:id="@+id/ptsdexpandableButton3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ptsdexpandableLayout2"
                android:background="#3498db"
                android:text="@string/ptsd_title3"
                android:textSize="13dp"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="ptsdexpandableButton3"
                android:paddingRight="10dp"
                android:textColor="#fff" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/ptsdexpandableLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/ptsdexpandableButton3"
                android:background="#85c1e9"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_interpolator="accelerate"
                app:ael_orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:text="@string/ptsd_title3_description" />
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

            <Button
                android:id="@+id/ptsdexpandableButton4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ptsdexpandableLayout3"
                android:background="#117a65"
                android:text="@string/ptsd_title4"
                android:textSize="13dp"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="ptsdexpandableButton4"
                android:paddingRight="10dp"
                android:textColor="#fff" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/ptsdexpandableLayout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/ptsdexpandableButton4"
                android:background="#16a085"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_interpolator="accelerate"
                app:ael_orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:text="@string/ptsd_title4_description" />
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

        </LinearLayout>

    </ScrollView>

</android.support.v4.widget.NestedScrollView>
